Lesson 20 - Finish Channels List

--- a/Smack/Base.lproj/Main.storyboard
+++ b/Smack/Base.lproj/Main.storyboard
@@ -64,7 +64,7 @@
                                 <rect key="frame" x="0.0" y="125" width="375" height="427"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="AbF-8Y-Rxl">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="ChannelCell" id="AbF-8Y-Rxl" customClass="ChannelCell" customModule="Smack" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="AbF-8Y-Rxl" id="8us-Th-7LV">
@@ -84,6 +84,9 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <connections>
+                                            <outlet property="channelName" destination="uNb-gu-Boq" id="eKK-FQ-8cU"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -119,6 +122,7 @@
                     </view>
                     <connections>
                         <outlet property="loginBtn" destination="NCV-ns-dr8" id="SrG-7l-Og2"/>
+                        <outlet property="tableView" destination="Brs-4D-NVN" id="ktz-rF-vTV"/>
                         <outlet property="userImg" destination="xS5-j1-grb" id="78l-7s-clr"/>
                         <segue destination="hA3-JO-Jz1" kind="show" identifier="toLogin" id="W4E-Hd-8UV"/>
                     </connections>
